Added tests stream API's
